--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,17 @@ services:
       - ollama:/root/.ollama
     restart: unless-stopped
 
+  ipfs:
+    image: ipfs/kubo:latest
+    container_name: ipfs
+    ports:
+      - "4001:4001"   # p2p
+      - "5001:5001"   # API
+      - "8080:8080"   # Gateway
+    volumes:
+      - ipfs_data:/data/ipfs
+    restart: unless-stopped
+
 volumes:
   ollama:
+  ipfs_data:
